--- a/platform/Makefile
+++ b/platform/Makefile
@@ -18,14 +18,14 @@ endif
 .PHONY: poco all libexecs cppunit tests samples clean distclean install
 
 # TESTS and SAMPLES are set in config.make
-poco: libexecs $(if $(TESTS),tests) $(if $(SAMPLES),samples) 
+poco: libexecs $(if $(TESTS),tests) $(if $(SAMPLES),samples)
 all: libexecs tests samples
 
 INSTALLDIR = $(DESTDIR)$(POCO_PREFIX)
-COMPONENTS = Foundation XML JSON Util Net Data Data/SQLite Zip Crypto NetSSL_OpenSSL CppParser CodeGeneration JS/V8 JS/Core JS/Data JS/Bridge JS/Net RemotingNG RemotingNG/RemoteGen RemotingNG/TCP OSP OSP/BundleCreator OSP/CodeCacheUtility OSP/Web OSP/Core OSP/Crypto OSP/Data OSP/Data/SQLite OSP/Net OSP/NetSSL_OpenSSL OSP/SecureWebServer OSP/WebServer OSP/JS OSP/JS/Net OSP/JS/Data OSP/JS/Web OSP/JS/Scheduler
+COMPONENTS = Foundation XML JSON Util Net Data Data/SQLite Zip Crypto NetSSL_OpenSSL CppParser CodeGeneration JS/V8 JS/Core JS/Data JS/Bridge JS/Net RemotingNG RemotingNG/RemoteGen RemotingNG/TCP OSP OSP/BundleCreator OSP/CodeCacheUtility OSP/StripBundle OSP/Web OSP/Core OSP/Crypto OSP/Data OSP/Data/SQLite OSP/Net OSP/NetSSL_OpenSSL OSP/SecureWebServer OSP/WebServer OSP/JS OSP/JS/Net OSP/JS/Data OSP/JS/Web OSP/JS/Scheduler
 
 cppunit:
-	$(MAKE) -C $(POCO_BASE)/CppUnit 
+	$(MAKE) -C $(POCO_BASE)/CppUnit
 
 CppUnit-clean:
 	$(MAKE) -C $(POCO_BASE)/CppUnit clean
@@ -56,12 +56,12 @@ libexecs += \
     WebTunnel-libexec \
     JS/V8-libexec JS/Core-libexec JS/Data-libexec JS/Bridge-libexec JS/Net-libexec \
     CodeGeneration-libexec RemotingNG-libexec RemotingNG/RemoteGen-libexec RemotingNG/TCP-libexec \
-    OSP-libexec OSP/BundleCreator-libexec OSP/CodeCacheUtility-libexec OSP/Web-libexec OSP/Core-libexec OSP/Crypto-libexec OSP/Data-libexec OSP/Data/SQLite-libexec OSP/Net-libexec OSP/NetSSL_OpenSSL-libexec OSP/SecureWebServer-libexec OSP/WebServer-libexec OSP/JS-libexec OSP/JS/Net-libexec OSP/JS/Data-libexec OSP/JS/Web-libexec OSP/JS/Scheduler-libexec OSP/WebEvent-libexec OSP/SimpleAuth-libexec \
+    OSP-libexec OSP/BundleCreator-libexec OSP/CodeCacheUtility-libexec OSP/StripBundle-libexec OSP/Web-libexec OSP/Core-libexec OSP/Crypto-libexec OSP/Data-libexec OSP/Data/SQLite-libexec OSP/Net-libexec OSP/NetSSL_OpenSSL-libexec OSP/SecureWebServer-libexec OSP/WebServer-libexec OSP/JS-libexec OSP/JS/Net-libexec OSP/JS/Data-libexec OSP/JS/Web-libexec OSP/JS/Scheduler-libexec OSP/WebEvent-libexec OSP/SimpleAuth-libexec \
     OSP/RemotingNG/TCP-libexec \
     Geo-libexec \
     Serial-libexec \
     Redis-libexec
-    
+
 tests    += CodeGeneration-tests RemotingNG-tests RemotingNG/TCP-tests OSP-tests OSP/Web-tests Geo-tests Redis-tests
 
 samples  += WebTunnel-samples
@@ -70,7 +70,7 @@ cleans   += \
     WebTunnel-clean \
     JS/V8-clean JS/Core-clean JS/Data-clean JS/Bridge-clean JS/Net-clean \
     CodeGeneration-clean RemotingNG-clean RemotingNG/RemoteGen-clean RemotingNG/TCP-clean \
-    OSP-clean OSP/BundleCreator-clean OSP/CodeCacheUtility-clean OSP/Web-clean OSP/Core-clean OSP/Crypto-clean OSP/Data-clean OSP/Data/SQLite-clean OSP/Net-clean OSP/NetSSL_OpenSSL-clean OSP/SecureWebServer-clean OSP/WebServer-clean OSP/JS-clean OSP/JS/Net-clean OSP/JS/Data-clean OSP/JS/Web-clean OSP/JS/Scheduler-clean OSP/WebEvent-clean OSP/SimpleAuth-clean \
+    OSP-clean OSP/BundleCreator-clean OSP/CodeCacheUtility-clean OSP/StripBundle-clean OSP/Web-clean OSP/Core-clean OSP/Crypto-clean OSP/Data-clean OSP/Data/SQLite-clean OSP/Net-clean OSP/NetSSL_OpenSSL-clean OSP/SecureWebServer-clean OSP/WebServer-clean OSP/JS-clean OSP/JS/Net-clean OSP/JS/Data-clean OSP/JS/Web-clean OSP/JS/Scheduler-clean OSP/WebEvent-clean OSP/SimpleAuth-clean \
     OSP/RemotingNG/TCP-clean \
     Geo-clean \
     Serial-clean \
@@ -86,13 +86,13 @@ tests: $(filter-out $(foreach f,$(OMIT),$f%),$(tests))
 samples: $(filter-out $(foreach f,$(OMIT),$f%),$(samples))
 cleans: $(filter-out $(foreach f,$(OMIT),$f%),$(cleans))
 
-Foundation-libexec: 
+Foundation-libexec:
 	$(MAKE) -C $(POCO_BASE)/Foundation
 
 Foundation-tests: Foundation-libexec cppunit
 	$(MAKE) -C $(POCO_BASE)/Foundation/testsuite
-	
-Foundation-samples: Foundation-libexec 
+
+Foundation-samples: Foundation-libexec
 	$(MAKE) -C $(POCO_BASE)/Foundation/samples
 
 Foundation-clean:
@@ -105,8 +105,8 @@ XML-libexec:  Foundation-libexec
 
 XML-tests: XML-libexec cppunit
 	$(MAKE) -C $(POCO_BASE)/XML/testsuite
-	
-XML-samples: XML-libexec 
+
+XML-samples: XML-libexec
 	$(MAKE) -C $(POCO_BASE)/XML/samples
 
 XML-clean:
@@ -119,8 +119,8 @@ JSON-libexec:  Foundation-libexec
 
 JSON-tests: JSON-libexec cppunit
 	$(MAKE) -C $(POCO_BASE)/JSON/testsuite
-	
-JSON-samples: JSON-libexec 
+
+JSON-samples: JSON-libexec
 	$(MAKE) -C $(POCO_BASE)/JSON/samples
 
 JSON-clean:
@@ -133,8 +133,8 @@ Util-libexec:  Foundation-libexec XML-libexec JSON-libexec
 
 Util-tests: Util-libexec cppunit
 	$(MAKE) -C $(POCO_BASE)/Util/testsuite
-	
-Util-samples: Util-libexec 
+
+Util-samples: Util-libexec
 	$(MAKE) -C $(POCO_BASE)/Util/samples
 
 Util-clean:
@@ -147,7 +147,7 @@ Net-libexec:  Foundation-libexec
 
 Net-tests: Net-libexec cppunit
 	$(MAKE) -C $(POCO_BASE)/Net/testsuite
-	
+
 Net-samples: Net-libexec  Foundation-libexec XML-libexec Util-libexec
 	$(MAKE) -C $(POCO_BASE)/Net/samples
 
@@ -161,7 +161,7 @@ Crypto-libexec:  Foundation-libexec
 
 Crypto-tests: Crypto-libexec cppunit
 	$(MAKE) -C $(POCO_BASE)/Crypto/testsuite
-	
+
 Crypto-samples: Crypto-libexec  Foundation-libexec Util-libexec
 	$(MAKE) -C $(POCO_BASE)/Crypto/samples
 
@@ -175,8 +175,8 @@ NetSSL_OpenSSL-libexec:  Foundation-libexec Net-libexec Util-libexec Crypto-libe
 
 NetSSL_OpenSSL-tests: NetSSL_OpenSSL-libexec cppunit
 	$(MAKE) -C $(POCO_BASE)/NetSSL_OpenSSL/testsuite
-	
-NetSSL_OpenSSL-samples: NetSSL_OpenSSL-libexec 
+
+NetSSL_OpenSSL-samples: NetSSL_OpenSSL-libexec
 	$(MAKE) -C $(POCO_BASE)/NetSSL_OpenSSL/samples
 
 NetSSL_OpenSSL-clean:
@@ -189,7 +189,7 @@ Data-libexec:  Foundation-libexec
 
 Data-tests: Data-libexec cppunit
 	$(MAKE) -C $(POCO_BASE)/Data/testsuite
-	
+
 Data-samples: Data-libexec  Data-libexec Data/SQLite-libexec
 	$(MAKE) -C $(POCO_BASE)/Data/samples
 
@@ -213,8 +213,8 @@ Zip-libexec:  Foundation-libexec Net-libexec Util-libexec XML-libexec
 
 Zip-tests: Zip-libexec cppunit
 	$(MAKE) -C $(POCO_BASE)/Zip/testsuite
-	
-Zip-samples: Zip-libexec 
+
+Zip-samples: Zip-libexec
 	$(MAKE) -C $(POCO_BASE)/Zip/samples
 
 Zip-clean:
@@ -225,7 +225,7 @@ Zip-clean:
 WebTunnel-libexec:  Foundation-libexec Net-libexec Util-libexec XML-libexec
 	$(MAKE) -C $(POCO_BASE)/WebTunnel
 
-WebTunnel-samples: WebTunnel-libexec 
+WebTunnel-samples: WebTunnel-libexec
 	$(MAKE) -C $(POCO_BASE)/WebTunnel/samples
 
 WebTunnel-clean:
@@ -233,8 +233,8 @@ WebTunnel-clean:
 
 PageCompiler-libexec:  Net-libexec Util-libexec XML-libexec Foundation-libexec
 	$(MAKE) -C $(POCO_BASE)/PageCompiler
-	
-PageCompiler-samples: PageCompiler-libexec 
+
+PageCompiler-samples: PageCompiler-libexec
 	$(MAKE) -C $(POCO_BASE)/PageCompiler/samples
 
 PageCompiler-clean:
@@ -267,7 +267,7 @@ CodeGeneration-clean:
 	$(MAKE) -C $(POCO_BASE)/CodeGeneration clean
 	$(MAKE) -C $(POCO_BASE)/CodeGeneration/testsuite clean
 
-JS/V8-libexec:  
+JS/V8-libexec:
 	$(MAKE) -C $(POCO_BASE)/JS/V8
 
 JS/V8-clean:
@@ -276,25 +276,25 @@ JS/V8-clean:
 JS/Core-libexec:  Foundation-libexec XML-libexec Util-libexec JS/V8-libexec
 	$(MAKE) -C $(POCO_BASE)/JS/Core
 
-JS/Core-clean:  
+JS/Core-clean:
 	$(MAKE) -C $(POCO_BASE)/JS/Core clean
 
 JS/Data-libexec:  Foundation-libexec Data-libexec JS/Core-libexec
 	$(MAKE) -C $(POCO_BASE)/JS/Data
 
-JS/Data-clean: 
+JS/Data-clean:
 	$(MAKE) -C $(POCO_BASE)/JS/Data clean
 
 JS/Bridge-libexec:  Foundation-libexec RemotingNG-libexec JS/Core-libexec
 	$(MAKE) -C $(POCO_BASE)/JS/Bridge
 
-JS/Bridge-clean:  
+JS/Bridge-clean:
 	$(MAKE) -C $(POCO_BASE)/JS/Bridge clean
 
 JS/Net-libexec:  Foundation-libexec Net-libexec JS/Core-libexec
 	$(MAKE) -C $(POCO_BASE)/JS/Net
 
-JS/Net-clean:  
+JS/Net-clean:
 	$(MAKE) -C $(POCO_BASE)/JS/Net clean
 
 RemotingNG-libexec:  Foundation-libexec
@@ -303,14 +303,14 @@ RemotingNG-libexec:  Foundation-libexec
 RemotingNG-tests: RemotingNG-libexec cppunit
 	$(MAKE) -C $(POCO_BASE)/RemotingNG/testsuite
 
-RemotingNG-clean:  
+RemotingNG-clean:
 	$(MAKE) -C $(POCO_BASE)/RemotingNG clean
 	$(MAKE) -C $(POCO_BASE)/RemotingNG/testsuite clean
 
 RemotingNG/RemoteGen-libexec:  RemotingNG-libexec CodeGeneration-libexec Net-libexec Util-libexec CppParser-libexec XML-libexec Foundation-libexec
 	$(MAKE) -C $(POCO_BASE)/RemotingNG/RemoteGen
 
-RemotingNG/RemoteGen-clean:  
+RemotingNG/RemoteGen-clean:
 	$(MAKE) -C $(POCO_BASE)/RemotingNG/RemoteGen clean
 
 RemotingNG/TCP-libexec:  RemotingNG-libexec Net-libexec Foundation-libexec
@@ -319,7 +319,7 @@ RemotingNG/TCP-libexec:  RemotingNG-libexec Net-libexec Foundation-libexec
 RemotingNG/TCP-tests: RemotingNG/TCP-libexec cppunit
 	$(MAKE) -C $(POCO_BASE)/RemotingNG/TCP/testsuite
 
-RemotingNG/TCP-clean: 
+RemotingNG/TCP-clean:
 	$(MAKE) -C $(POCO_BASE)/RemotingNG/TCP clean
 	$(MAKE) -C $(POCO_BASE)/RemotingNG/TCP/testsuite clean
 
@@ -329,21 +329,27 @@ OSP-libexec:  Foundation-libexec XML-libexec Util-libexec Zip-libexec
 OSP-tests: OSP-libexec cppunit
 	$(MAKE) -C $(POCO_BASE)/OSP/testsuite
 
-OSP-clean:  
+OSP-clean:
 	$(MAKE) -C $(POCO_BASE)/OSP clean
 	$(MAKE) -C $(POCO_BASE)/OSP/testsuite clean
 
 OSP/BundleCreator-libexec:  Foundation-libexec XML-libexec Util-libexec Zip-libexec OSP-libexec
 	$(MAKE) -C $(POCO_BASE)/OSP/BundleCreator
 
-OSP/BundleCreator-clean:  
+OSP/BundleCreator-clean:
 	$(MAKE) -C $(POCO_BASE)/OSP/BundleCreator clean
 
 OSP/CodeCacheUtility-libexec:  Foundation-libexec XML-libexec Util-libexec Zip-libexec OSP-libexec
 	$(MAKE) -C $(POCO_BASE)/OSP/CodeCacheUtility
 
-OSP/CodeCacheUtility-clean:  
+OSP/CodeCacheUtility-clean:
 	$(MAKE) -C $(POCO_BASE)/OSP/CodeCacheUtility clean
+
+OSP/StripBundle-libexec:  Foundation-libexec XML-libexec Util-libexec Zip-libexec
+	$(MAKE) -C $(POCO_BASE)/OSP/StripBundle
+
+OSP/StripBundle-clean:
+	$(MAKE) -C $(POCO_BASE)/OSP/StripBundle clean
 
 OSP/Web-libexec:  Net-libexec OSP-libexec OSP/BundleCreator-libexec
 	$(MAKE) -C $(POCO_BASE)/OSP/Web
@@ -351,86 +357,86 @@ OSP/Web-libexec:  Net-libexec OSP-libexec OSP/BundleCreator-libexec
 OSP/Web-tests: OSP/Web-libexec cppunit
 	$(MAKE) -C $(POCO_BASE)/OSP/Web/testsuite
 
-OSP/Web-clean: 
+OSP/Web-clean:
 	$(MAKE) -C $(POCO_BASE)/OSP/Web clean
 	$(MAKE) -C $(POCO_BASE)/OSP/Web/testsuite clean
 
 OSP/Core-libexec:  OSP-libexec OSP/BundleCreator-libexec
 	$(MAKE) -C $(POCO_BASE)/OSP/Core
 
-OSP/Core-clean: 
+OSP/Core-clean:
 	$(MAKE) -C $(POCO_BASE)/OSP/Core clean
 
 OSP/Crypto-libexec:  Crypto-libexec OSP-libexec OSP/BundleCreator-libexec
 	$(MAKE) -C $(POCO_BASE)/OSP/Crypto
 
-OSP/Crypto-clean:  
+OSP/Crypto-clean:
 	$(MAKE) -C $(POCO_BASE)/OSP/Crypto clean
 
 OSP/Data-libexec:  Data-libexec OSP-libexec OSP/BundleCreator-libexec
 	$(MAKE) -C $(POCO_BASE)/OSP/Data
 
-OSP/Data-clean: 
+OSP/Data-clean:
 	$(MAKE) -C $(POCO_BASE)/OSP/Data clean
 
 OSP/Data/SQLite-libexec:  Data-libexec Data/SQLite-libexec OSP-libexec OSP/BundleCreator-libexec
 	$(MAKE) -C $(POCO_BASE)/OSP/Data/SQLite
 
-OSP/Data/SQLite-clean: 
+OSP/Data/SQLite-clean:
 	$(MAKE) -C $(POCO_BASE)/OSP/Data/SQLite clean
 
 OSP/Net-libexec:  Net-libexec OSP-libexec OSP/BundleCreator-libexec
 	$(MAKE) -C $(POCO_BASE)/OSP/Net
 
-OSP/Net-clean:  
+OSP/Net-clean:
 	$(MAKE) -C $(POCO_BASE)/OSP/Net clean
 
 OSP/NetSSL_OpenSSL-libexec:  Net-libexec NetSSL_OpenSSL-libexec OSP-libexec OSP/BundleCreator-libexec
 	$(MAKE) -C $(POCO_BASE)/OSP/NetSSL_OpenSSL
 
-OSP/NetSSL_OpenSSL-clean: 
+OSP/NetSSL_OpenSSL-clean:
 	$(MAKE) -C $(POCO_BASE)/OSP/NetSSL_OpenSSL clean
 
 OSP/SecureWebServer-libexec:  NetSSL_OpenSSL-libexec OSP-libexec OSP/Web-libexec OSP/BundleCreator-libexec
 	$(MAKE) -C $(POCO_BASE)/OSP/SecureWebServer
 
-OSP/SecureWebServer-clean:  
+OSP/SecureWebServer-clean:
 	$(MAKE) -C $(POCO_BASE)/OSP/SecureWebServer clean
 
 OSP/WebServer-libexec:  OSP-libexec OSP/Web-libexec OSP/BundleCreator-libexec
 	$(MAKE) -C $(POCO_BASE)/OSP/WebServer
 
-OSP/WebServer-clean:  
+OSP/WebServer-clean:
 	$(MAKE) -C $(POCO_BASE)/OSP/WebServer clean
 
 OSP/JS-libexec:  Foundation-libexec XML-libexec Util-libexec Net-libexec JS/Core-libexec JS/Bridge-libexec JS/Net-libexec JS/Data-libexec OSP-libexec OSP/BundleCreator-libexec
 	$(MAKE) -C $(POCO_BASE)/OSP/JS
 
-OSP/JS-clean:  
+OSP/JS-clean:
 	$(MAKE) -C $(POCO_BASE)/OSP/JS clean
 
 OSP/JS/Net-libexec:  OSP/JS-libexec Net-libexec OSP/BundleCreator-libexec
 	$(MAKE) -C $(POCO_BASE)/OSP/JS/Net
 
-OSP/JS/Net-clean:  
+OSP/JS/Net-clean:
 	$(MAKE) -C $(POCO_BASE)/OSP/JS/Net clean
 
 OSP/JS/Data-libexec:  OSP/JS-libexec Data-libexec OSP/BundleCreator-libexec
 	$(MAKE) -C $(POCO_BASE)/OSP/JS/Data
 
-OSP/JS/Data-clean:  
+OSP/JS/Data-clean:
 	$(MAKE) -C $(POCO_BASE)/OSP/JS/Data clean
 
 OSP/JS/Web-libexec:  OSP/JS-libexec OSP/Web-libexec OSP/BundleCreator-libexec
 	$(MAKE) -C $(POCO_BASE)/OSP/JS/Web
 
-OSP/JS/Web-clean:  
+OSP/JS/Web-clean:
 	$(MAKE) -C $(POCO_BASE)/OSP/JS/Web clean
 
 OSP/JS/Scheduler-libexec:  OSP/JS-libexec OSP/BundleCreator-libexec
 	$(MAKE) -C $(POCO_BASE)/OSP/JS/Scheduler
 
-OSP/JS/Scheduler-clean:  
+OSP/JS/Scheduler-clean:
 	$(MAKE) -C $(POCO_BASE)/OSP/JS/Scheduler clean
 
 OSP/WebEvent-libexec:  Net-libexec OSP-libexec OSP/BundleCreator-libexec OSP/Web-libexec
@@ -439,16 +445,16 @@ OSP/WebEvent-libexec:  Net-libexec OSP-libexec OSP/BundleCreator-libexec OSP/Web
 OSP/WebEvent-clean:
 	$(MAKE) -C $(POCO_BASE)/OSP/WebEvent clean
 
-OSP/SimpleAuth-libexec:  OSP-libexec OSP/BundleCreator-libexec 
+OSP/SimpleAuth-libexec:  OSP-libexec OSP/BundleCreator-libexec
 	$(MAKE) -C $(POCO_BASE)/OSP/SimpleAuth
 
 OSP/SimpleAuth-clean:
 	$(MAKE) -C $(POCO_BASE)/OSP/SimpleAuth clean
-	
+
 OSP/RemotingNG/TCP-libexec:  OSP-libexec OSP/BundleCreator-libexec RemotingNG/TCP-libexec
 	$(MAKE) -C $(POCO_BASE)/OSP/RemotingNG/TCP
 
-OSP/RemotingNG-clean:  
+OSP/RemotingNG-clean:
 	$(MAKE) -C $(POCO_BASE)/OSP/RemotingNG/TCP clean
 
 Geo-libexec:  Foundation-libexec
